tests/ui/type-inference/constrained-struct-duplicate-errors-issue-104637.stderr
error[E0277]: the trait bound `Struct<u8>: Trait` is not satisfied
  --> $DIR/constrained-struct-duplicate-errors-issue-104637.rs:16:12
   |
LL |     let _: Struct<u8> = Struct { field: 0 };
   |            ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Trait` is not implemented for `Struct<u8>`
  --> $DIR/constrained-struct-duplicate-errors-issue-104637.rs:6:1
   |
LL | struct Struct<T>
   | ^^^^^^^^^^^^^^^^
help: the trait `Trait` is implemented for `Struct<bool>`
  --> $DIR/constrained-struct-duplicate-errors-issue-104637.rs:13:1
   |
LL | impl Trait for Struct<bool> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Struct`
  --> $DIR/constrained-struct-duplicate-errors-issue-104637.rs:8:16
   |
LL | struct Struct<T>
   |        ------ required by a bound in this struct
LL | where
LL |     Struct<T>: Trait,
   |                ^^^^^ required by this bound in `Struct`

error[E0308]: mismatched types
  --> $DIR/constrained-struct-duplicate-errors-issue-104637.rs:16:41
   |
LL |     let _: Struct<u8> = Struct { field: 0 };
   |                                         ^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/constrained-struct-duplicate-errors-issue-104637.rs:16:25
   |
LL |     let _: Struct<u8> = Struct { field: 0 };
   |            ----------   ^^^^^^^^^^^^^^^^^^^ expected `Struct<u8>`, found `Struct<bool>`
   |            |
   |            expected due to this
   |
   = note: expected struct `Struct<u8>`
              found struct `Struct<bool>`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
